--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "frontend-template",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "start": "npm run dev",
     "build": "tsc && vite build",
-    "test": "react-scripts test",
-    "cypress": "cypress open",
+    "cy:open": "cypress open",
+    "test:jest": "jest __tests__",
+    "test:cy": "cypress run",
+    "test": "npm run test:jest && npm run test:cy",
+    "pretest": "rm -rf .nyc_output || true",
+    "posttest": "npm run report:combined",
+    "mkdir:reports": "mkdir reports || true",
+    "precopy:reports": "npm run mkdir:reports",
+    "copy:reports": "cp cypress-coverage/coverage-final.json reports/from-cypress.json && cp jest-coverage/coverage-final.json reports/from-jest.json",
+    "precombine:reports": "npm run copy:reports && mkdir .nyc_output || true",
+    "combine:reports": "npx nyc merge reports && mv coverage.json .nyc_output/out.json",
+    "prereport:combined": "npm run combine:reports",
+    "report:combined": "npx nyc report --reporter lcov --reporter text --report-dir coverage",
     "serve": "vite preview",
     "prepare": "husky install",
     "format": "prettier --write src/**/*.ts{,x}",
@@ -17,9 +28,17 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^3.0.1"
+  },
+  "nyc": {
+    "report-dir": "cypress-coverage"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@cypress/browserify-preprocessor": "^3.0.2",
+    "@cypress/code-coverage": "^3.9.12",
+    "@cypress/webpack-preprocessor": "^5.11.1",
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -29,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "babel-plugin-istanbul": "^6.1.1",
     "cypress": "^9.5.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
@@ -40,9 +60,13 @@
     "husky": "^7.0.0",
     "lint-staged": "^12.1.2",
     "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
     "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
+    "ts-loader": "^9.2.6",
+    "tsify": "^5.0.4",
     "typescript": "^4.3.2",
-    "vite": "^2.8.2"
+    "vite": "^2.8.2",
+    "webpack": "^5.69.1"
   }
 }
