--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "lint": "npm-run-all --parallel lint:format lint:fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.3",
+    "axios": "^0.26.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-scripts": "^3.0.1"
@@ -50,6 +54,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "babel-plugin-istanbul": "^6.1.1",
     "cypress": "^9.5.0",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
