--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "baseUrl": "src",
     "typeRoots": ["node_modules/@types"],
-    "types": ["cypress"]
+    "types": ["cypress", "cypress-file-upload"]
   },
-  "include": ["./src", "__tests__"],
+  "include": ["./src"],
   "exclude": ["node_modules"]
   //   "exclude": ["node_modules", "lint-staged.config.js"]
 }
