--- a/amplify.yml
+++ b/amplify.yml
@@ -25,10 +25,12 @@ test:
   phases:
     preTest:
       commands:
-        - npm install
+       npm ci
         - npm install wait-on
+        - npm install pm2
         - npm install mocha mochawesome mochawesome-merge mochawesome-report-generator
-        - "npm start & npx wait-on http://127.0.0.1:8080"
+        - npx pm2 start npm -- start
+        - 'npx wait-on http://localhost:3000/#/'
     test:
       commands:
         - 'npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"'
