--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.1.2",
+    "mochawesome": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "prettier": "^2.5.1",
