fix(): updated amplify.yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -25,7 +25,7 @@ test:
   phases:
     preTest:
       commands:
-       npm ci
+        - npm ci
         - npm install wait-on
         - npm install pm2
         - npm install mocha mochawesome mochawesome-merge mochawesome-report-generator
