--- a/amplify.yml
+++ b/amplify.yml
@@ -30,7 +30,7 @@ test:
         - npm install pm2
         - npm install mocha mochawesome mochawesome-merge mochawesome-report-generator
         - npx pm2 start npm -- start
-        - 'npm run wait-on http://localhost:3000'
+        - 'wait-on http://localhost:3000'
     test:
       commands:
         - 'npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"'
