--- a/amplify.yml
+++ b/amplify.yml
@@ -16,25 +16,21 @@ frontend:
     paths:
       - node_modules/**/*
 test:
+  phases:
+    preTest:
+      commands:
+        - npm install
+        - npm install start-server-and-test cypress mocha mochawesome mochawesome-merge mochawesome-report-generator --save-dev
+    test:
+      commands:
+        - npm run build
+        - npx start-test 'npm start' 3000 'npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"'
+    postTest:
+      commands:
+        - npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json
   artifacts:
     baseDirectory: cypress
     configFilePath: '**/mochawesome.json'
     files:
       - '**/*.png'
       - '**/*.mp4'
-  phases:
-    preTest:
-      commands:
-        - npm ci
-        - npm install wait-on
-        - npm install pm2
-        - npm install mocha mochawesome mochawesome-merge mochawesome-report-generator
-        - npx pm2 start npm -- start
-        - 'npx wait-on http://localhost:3000'
-    test:
-      commands:
-        - 'npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"'
-    postTest:
-      commands:
-        - npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json
-        - npx pm2 kill
