--- a/amplify.yml
+++ b/amplify.yml
@@ -15,21 +15,21 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
-# test:
-#   phases:
-#     preTest:
-#       commands:
-#         - npm install
-#         - npm install start-server-and-test cypress mocha mochawesome mochawesome-merge mochawesome-report-generator --save-dev
-#     test:
-#       commands:
-#         - npx start-server-and-test 'npm start' 3000 'npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"'
-#     postTest:
-#       commands:
-#         - npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json
-#   artifacts:
-#     baseDirectory: cypress
-#     configFilePath: '**/mochawesome.json'
-#     files:
-#       - '**/*.png'
-#       - '**/*.mp4'
+test:
+  phases:
+    preTest:
+      commands:
+        - npm install
+        - npm install start-server-and-test cypress mocha mochawesome mochawesome-merge mochawesome-report-generator --save-dev
+    test:
+      commands:
+        - npx start-server-and-test 'npm start' 3000 'npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"'
+    postTest:
+      commands:
+        - npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json
+  artifacts:
+    baseDirectory: cypress
+    configFilePath: '**/mochawesome.json'
+    files:
+      - '**/*.png'
+      - '**/*.mp4'
