--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "concurrently": "6.4.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
+    "@vitejs/plugin-react": "^1.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "babel-plugin-istanbul": "^6.1.1",
     "cypress": "^9.5.0",
