--- a/amplify.yml
+++ b/amplify.yml
@@ -24,7 +24,7 @@ test:
     test:
       commands:
         - npx start-server-and-test 'npm start' 3000 &
-        - npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"
+        - npx cypress run --record --key d986748b-fb01-4d47-ae9f-6bddd22f0764 --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"
     postTest:
       commands:
         - npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json
