--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^17.0.21",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
@@ -55,6 +56,7 @@
     "@vitejs/plugin-react": "^1.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-transform-import-meta": "^2.1.1",
     "cypress": "^9.5.0",
     "cypress-file-upload": "^5.0.8",
     "eslint": "^8.4.1",
