fix(): updated config files

--- a/.eslintignore
+++ b/.eslintignore
@@ -6,3 +6,11 @@ dist-ssr
 node_modules/*
 amplify/*
 cypress/*
+package.json
+package-lock.json
+cypress.json
+lint-staged.config.js
+babel.config.js
+jest.config.js
+jest-coverage/*
+
